--- a/public/styleSheet/default-components/container-poupup.css
+++ b/public/styleSheet/default-components/container-poupup.css
@@ -2,9 +2,8 @@
     display: none;
     width: 100%;
     height: 100vh;
-    margin-top: -80px;
     background-color: rgba(36, 35, 35, 0.435);
-    position: absolute;
+    position: fixed;
 
 
 }
