--- a/public/styleSheet/views-styleSheets/status.css
+++ b/public/styleSheet/views-styleSheets/status.css
@@ -21,13 +21,13 @@
 .content-progressbar{
     margin-bottom: 5px;
     width: 70%;
-    height: 6px;
+    height: 4px;
     border-radius: 20px;
     background-color: silver;
 }
 .content-progress{
     width: 25%;
-    height: 6px;
+    height: 4px;
     border-radius: 20px;
     background-color: tomato;
 }
@@ -39,8 +39,8 @@
     margin-top: 10px;
 }
 #deliver_status{
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     margin-left: 12%;
 }
 
@@ -103,17 +103,18 @@ height: 100vh;
 }
 .container-float-info{
     width: 90%;
-    height: 43vh;
+    height: 40vh;
     border-radius: 50px;
     bottom: 30px;
     background-color: tomato;
     position: absolute;
     z-index: 1000;
     cursor: pointer;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.4);
 }
 .content-float-info{
     width: 100%;
-    height: 34vh;
+    height: 30vh;
     border: 2px solid white;
     border-radius: 50px;
     bottom: 0px;
@@ -158,4 +159,18 @@ height: 100vh;
     width: 43px;
     height: 43px;
     border-radius: 100%;
+}
+.smalStar{
+    width: 15px;
+    height: 15px;
+
+}
+#containerPoupup-call{
+    background-color: #f8f8f8;
+    display: flex;
+    z-index: 2000;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
