--- a/views/markOnMap.html
+++ b/views/markOnMap.html
@@ -20,8 +20,8 @@
 <body>
     <div class="container-main">
         <div class="btn-navigaor">
-            <a href="/views/addLocation.html"><button id="btnBack" class="control-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button></a>
-            <button class="control-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
+            <a href="/views/addLocation.html"><button id="btnBack" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button></a>
+            <button class="navigatio-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
         </div>
         <div id="map">
           
