--- a/public/styleSheet/default-components/control-button.css
+++ b/public/styleSheet/default-components/control-button.css
@@ -12,3 +12,17 @@
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
+.control-button:active{
+    transform: scale(0);
+    transition: all 0.3s;
+}
+.navigatio-button{
+
+    border: none;
+    background-color: transparent;   
+}
+
+.navigatio-button:active{
+    transform: scale(0);
+    transition: all 0.3s;
+}
