--- a/public/styleSheet/views-styleSheets/home.css
+++ b/public/styleSheet/views-styleSheets/home.css
@@ -192,6 +192,7 @@ body{
     align-items: center;
     flex-direction: row;
     gap: 200px;
+    margin-top: -65vh;
 }
 
 .photoPizza{
@@ -203,10 +204,11 @@ body{
     box-shadow: 0px 15px 15px rgba(0,0,0,0.3);
     
 }
+
 .content-info{
     position: absolute;
-    margin-top: 45vh;
-    padding-top: 57px;
+    margin-top: 3vh;
+    padding-top: 25px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -219,8 +221,18 @@ body{
 .content-name{
     width: 100%;
     display: flex;
+    margin-top: -30px;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+
+}
+.btn-name{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border: none;
 }
 .controls{
     margin-top: 20px;
@@ -241,6 +253,11 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.content-size:active{
+    
+    transform: scale(0.7);
+    transition: all 0.5s;
 }
 .container-size{    
     width: 100%;
@@ -273,4 +290,29 @@ body{
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+.container-info-tomato{
+    background-color: tomato;
+    height: 90vh;
+    position: absolute;
+    margin-top: 50vh;
+    padding-top: 57px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+    border-radius: 80px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+}
+
+.container-menu{
+    position: fixed;
+    top: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    width: 100%;
+    height: 100vh;
+    background-color: #f8f8f8;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
 }
