--- a/public/styleSheet/views-styleSheets/status.css
+++ b/public/styleSheet/views-styleSheets/status.css
@@ -103,7 +103,7 @@ height: 100vh;
 }
 .container-float-info{
     width: 90%;
-    height: 40vh;
+    height: 41vh;
     border-radius: 50px;
     bottom: 30px;
     background-color: tomato;
@@ -113,6 +113,7 @@ height: 100vh;
     box-shadow: 0px 0px 15px rgba(0,0,0,0.4);
 }
 .content-float-info{
+    padding-bottom: 10px;
     width: 100%;
     height: 30vh;
     border: 2px solid white;
@@ -170,7 +171,150 @@ height: 100vh;
     display: flex;
     z-index: 2000;
     flex-direction: column;
+    gap: 20px;
+}
+#containerCall{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background-color: #f8f8f8;
+    position: fixed;
+    z-index: 3000;
+
+
+}
+.content-loading{
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: center;
     align-items: center;
+
+}
+.content-info{
+    width: 100%;
+    gap: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+    align-items: center;
+}
+
+#containerOrderInfo{
+    display: none;
+    padding-bottom: 50px;
+    width: 100%;
+    height: 100vh;
+    background-color: #f8f8f8;
+    position: fixed;
+    z-index: 3000;
+    flex-direction: column;
     gap: 20px;
+
+}
+
+.content-from-to2{
+    margin-top: 110px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.title{
+    color: silver;
+    margin-left: -230px;
+
+}
+.content-input2{
+    background-color: #f8f8f8;
+    margin-left: -150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.container-order-products{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.container-order-products-row{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    overflow-x: scroll;
+    
+}
+.content-order-product{
+    width: 150px;
+    height: 100px;
+    border-radius: 15px;
+    background-color: white;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+}
+.product-info{
+    width: 100%;
+    display: flex;
+}
+.product-sizes{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.container-deliver{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.content-deliver{
+    display: flex;
+    border-radius: 15px;
+    width: 80%;
+    background-color: white;
+    gap: 20px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+}
+.orders{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.container-payment{
+width: 100%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 20px;
+}
+.content-total{
+    display: flex;
+    width: 85%;
+    border-radius: 15px;
+    height: 70px;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
