--- a/views/cart.html
+++ b/views/cart.html
@@ -20,8 +20,8 @@
     <div class="container-main">
         <div class="container-header">
             <div class="btn-navigaor">
-                <button id="btnBack" class="control-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
-                <a href="/views/addLocation.html"><button class="control-button" id="buyButton">Comprar</button></a>
+                <button id="btnBack" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
+                <a href="/views/addLocation.html"><button class="navigatio-button" id="buyButton">Comprar</button></a>
             </div>
             <div class="content-info">
                 <h3 class="color-default-tomato">Prrodutos no <br> carrinho</h5>
