--- a/views/status.html
+++ b/views/status.html
@@ -23,8 +23,8 @@
     <div class="container-main">
         <section id="containerPoupup">
             <div class="btn-navigaor">
-                <button id="btnCloseQrcode" class="control-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
-                <button class="control-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
+                <button id="btnCloseQrcode" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
+                <button class="navigatio-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
             </div>
             <div class="content-qrcode">
                 <img width="150px" height="150px" src="/public/img/ico/qr_code_48px.png" alt="">
@@ -46,9 +46,135 @@
             </div>
     
         </section>
+        <section id="containerCall">
+            
+            <div class="content-info">
+                <img style="border-radius: 100%;" width="150px" height="150px" src="/public/img/people/Red-Skull-Allied-Charge-on-Hydra-Premium-Format-01.jpg" alt="">
+                <h5 class="color-default-silver">Chamando...</h5>
+                <h3 class="color-default-tomato">
+                    Leonardo Jorge
+                </h4>
+                <button onclick="endCall()" style=" border-radius: 100%; width: 70px; height: 70px;  background-color: white; box-shadow: 0px 0px 5px rgba(0,0,0,0.3);" class="navigatio-button"><img src="/public/img/ico/icons8_call_32.png" alt=""></button>
+            </div>
+
+        </section>
+
+        <section id="containerOrderInfo">
+            <div class="btn-navigaor">
+                <button id="btnCloseOrderInfo" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button>
+                <button class="navigatio-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
+            </div>
+            <div class="content-from-to2">
+                <h3 class="title">Pontos</h3>
+                <div class="content-from">
+                    <div class="content-input2">
+                        <img class="icoLocation" src="/public/img/ico/icons8_shop_32.png" alt="">
+                        <div class="content-txt">
+                            <h6 class="color-default-silver">Nossa loja mais proxima</h4>
+                            <h5 class="color-default-tomato">Luanda, cuca</h5>
+
+                        </div>
+                    </div>
+    
+                </div>
+                <img style=" margin-left: -270px; transform: rotate(45deg);" src="/public/img/ico/icons8_down_right_32.png" alt="">
+                <div class="content-to">
+                    <div class="content-input2">
+                        <img class="icoLocation" src="/public/img/ico/icons8_Location_32.png" alt="">
+                        <div class="content-txt">
+                            <h6 class="color-default-silver">Voce</h4>
+                            <h5 class="color-default-tomato">Sua localização actual</h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-order-products">
+                <h3 class="title">Produtos</h3>
+                <div class="container-order-products-row">
+                    <div class="content-order-product">
+                        <div class="product-info">
+                            <div class="product-photo">
+                                <img style="margin: 0px;width: 70px; height: 70px;"src="/public/img/pizza/pizza20.jpeg" alt="">
+                            </div>
+                            <div class="product-sizes">
+                                <h6>tam: 24p</h4>
+                                <h6>Qunt: x3</h4>
+                                <h6>peso: 0.4kg</h4>
+                            </div>
+                        </div>
+                        <div class="name">
+                            <h6 class="color-default-tomato">pizza margarine</h5>
+
+                        </div>
+                    </div>
+                    <div class="content-order-product">
+                        <div class="product-info">
+                            <div class="product-photo">
+                                <img style="margin: 0px;width: 70px; height: 70px;"src="/public/img/pizza/pizza20.jpeg" alt="">
+                            </div>
+                            <div class="product-sizes">
+                                <h6>tam: 24p</h4>
+                                <h6>Qunt: x3</h4>
+                                <h6>peso: 0.4kg</h4>
+                            </div>
+                        </div>
+                        <div class="name">
+                            <h6 class="color-default-tomato">pizza margarine</h5>
+
+                        </div>
+                    </div>
+                    <div class="content-order-product">
+                        <div class="product-info">
+                            <div class="product-photo">
+                                <img style="margin: 0px;width: 70px; height: 70px;"src="/public/img/pizza/pizza20.jpeg" alt="">
+                            </div>
+                            <div class="product-sizes">
+                                <h6>tam: 24p</h4>
+                                <h6>Qunt: x3</h4>
+                                <h6>peso: 0.4kg</h4>
+                            </div>
+                        </div>
+                        <div class="name">
+                            <h6 class="color-default-tomato">pizza margarine</h5>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="container-deliver">
+                <h3 class="title">Entregador</h3>
+                <div class="content-deliver">
+                    <div class="orders">
+                        <h4 class="color-default-silver">Entregas</h4>
+                        <h2 class="color-default-tomato">23</h2>
+                    </div>
+                    <div class="info">
+                        <h4 class="color-default-tomato">Leonardo Jorge</h4>
+                        <div id="contentRate" class="container-rate">
+                            
+                            
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <img style="border-radius: 100%;" width="60px" height="60px" src="/public/img/people/Red-Skull-Allied-Charge-on-Hydra-Premium-Format-01.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+            <div class="container-payment">
+                <h3 class="title">Pagamento</h3>
+                <div class="content-total">
+                    <h3 class="color-default-silver">Total: </h3>
+                    <h3 class="color-default-tomato">7340, 00kz</h3>
+                </div>
+
+            </div>
+        </section>
         <div class="btn-navigaor">
-            <a href="/views/home.html"><button id="btnBack" class="control-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button></a>
-            <button class="control-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
+            <a href="/views/home.html"><button id="btnBack" class="navigatio-button"><img src="/public/img/ico/icons8_Close_32.png" alt=""></button></a>
+            <button class="navigatio-button" id="btnGetUserLocation"><img src="/public/img/ico/icons8_location_update_32.png" alt=""></button>
         </div>
         <div id="map">
           
@@ -65,9 +191,9 @@
                         </div>
                     </div>
                 </div>
-                <button style=" display: flex; justify-content: center;
-                 align-items: center; background-color: tomato; width: 40px; height: 40px;" class="circle-btn-silver"><img src="/public/img/ico/icons8_phone_32.png" alt=""></button>
-                 <button onclick="favorite(this)" style=" border: none; display: flex; justify-content: center;
+                <button onclick="openCall()" style=" display: flex; justify-content: center;
+                 align-items: center; background-color: tomato; width: 40px; height: 40px;" class="navigatio-button"><img src="/public/img/ico/icons8_phone_32.png" alt=""></button>
+                 <button class="navigatio-button" onclick="favorite(this)" style=" border: none; display: flex; justify-content: center;
                  align-items: center; background-color:tomato; width: 40px; height: 40px;"><img src="/public/img/ico/icons8_Favorite_32.png" alt=""></button>
             </div>
 
@@ -100,7 +226,6 @@
                     </div>
     
                 </div>
-                <!--<img class="arrow" src="/public/img/ico/icons8_down_right_32.png" alt=""> -->
                 <div class="content-to">
                     <div class="content-input">
                         <img class="icoLocation" src="/public/img/ico/icons8_Location_32.png" alt="">
@@ -113,9 +238,9 @@
                 </div>
             </div>
             <div class="content-footer">
-                <button id="btnInfo"   class="status-btn"><img src="/public/img/ico/icons8_info_32.png" alt=""></button>
-                <button id="btnQrCode" class="status-btn"><img src="/public/img/ico/icons8_Qr_Code_32.png" alt=""></button>
-                <button id="btnCall"   class="status-btn"><img src="/public/img/ico/icons8_phones_32.png" alt=""></button>
+                <button onclick="openInfo()"   class="navigatio-button"><img src="/public/img/ico/icons8_info_32.png" alt=""></button>
+                <button id="btnQrCode" class="navigatio-button"><img src="/public/img/ico/icons8_Qr_Code_32.png" alt=""></button>
+                <button onclick="openCall()"   class="navigatio-button"><img src="/public/img/ico/icons8_phones_32.png" alt=""></button>
 
             </div>
         </div>
@@ -123,12 +248,25 @@
       </div>
     </div>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    
   <script>
     const btnGetUserLocation = document.getElementById("btnGetUserLocation")
     const containerPoupup = document.getElementById("containerPoupup")
     const btnCloseQrcode = document.getElementById("btnCloseQrcode")
     const btnQrCode = document.getElementById("btnQrCode")
     const btnNext = document.getElementById("btnNext")
+    const btnCall = document.getElementById("btnCall")
+    const btnInfo = document.getElementById("btnInfo")
+    const btnCloseCall = document.getElementById("btnCloseCall")
+    const containerCall = document.getElementById("containerCall")
+    const btnCloseOrderInfo = document.getElementById("btnCloseOrderInfo")
+    const containerOrderInfo = document.getElementById("containerOrderInfo")
+    const contentRate = document.getElementById("contentRate")
+
+
+
+
+
     const  map = L.map('map' , { zoomControl: false})
     var markers = []
     var userPosition 
@@ -287,14 +425,14 @@
         const dLon = toRadians(lon2 - lon1);
 
         const a = Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-                    Math.cos(toRadians(lat1)) * Math.cos(toRadians(lat2)) *
-                    Math.sin(dLon / 2) * Math.sin(dLon / 2);
+        Math.cos(toRadians(lat1)) * Math.cos(toRadians(lat2)) *
+        Math.sin(dLon / 2) * Math.sin(dLon / 2);
         
         const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
         
         const distance = earthRadius * c;
         return distance;
-}
+    }
                             
 document.getElementById("rate").innerHTML = rates(parseInt(Math.random() *5));
 
@@ -323,7 +461,6 @@ function rates(value) {
         }
     }
     return rate + `<span style="color: white;">${value}</span>`
-    
 }
     
     
@@ -347,6 +484,21 @@ function rates(value) {
     btnCloseQrcode.addEventListener("click", () =>{
         containerPoupup.style.display = "none"
     })
+    btnCloseOrderInfo.addEventListener("click", () => {
+        containerOrderInfo.style.display = "none"
+    })
+    function openInfo() {
+        containerOrderInfo.style.display = "flex"
+        contentRate.innerHTML = rates(parseInt(Math.random() *5))
+        
+    }
+    function openCall() {
+        containerCall.style.display = "flex"
+    }
+    function endCall() {
+        containerCall.style.display = "none"
+
+    }
   </script>
 </body>
 </html>
